# BACH-opd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
bind/: BACH.cpp  BACH.h
include/BACH/: BACH.h
include/BACH/common/: ScanIter.h  dictionary.h  tuple.h  vector.h
include/BACH/compress/: ordered_dictionary.h
include/BACH/db/: DB.h  Iterator.h  Transaction.h
include/BACH/file/: FileReader.h  FileReaderCache.h  FileWriter.h
include/BACH/label/: LabelManager.h
include/BACH/memory/: AnswerMerger.h  FormatRow.h  MemoryManager.h  QueryCounter.h  RowGroup.h  RowMemoryManager.h  RowToColumn.h  TupleEntry.h  VertexEntry.h  VertexLabelIdEntry.h
include/BACH/profiler/: OperatorProfilerContext.h  ThreadProfilerContext.h  profiler.h
include/BACH/property/: PropertyFileBuilder.h  PropertyFileParser.h
include/BACH/sstable/: BlockBuilder.h  BlockParser.h  BloomFilter.h  Buffer.h  Compaction.h  FileManager.h  FileMetaData.h  RelFileBuilder.h  RelFileManager.h  RelFileMetaData.h  RelFileParser.h  RelVersion.h  SSTableBuilder.h  SSTableParser.h  Version.h  WriteBuffer.h
include/BACH/utils/: ConcurrentArray.h  ConcurrentList.h  Fenwick.h  FixedDoubleBitList.h  FixedSegmentTree.h  Options.h  skiplist.h  string_type.hpp  types.h  utils.h
include/BACH/vectorized_execution/: operator.h  readme.txt
src/: BlockBuilder.cpp  BlockParser.cpp  BloomFilter.cpp  DB.cpp  FileManager.cpp  FileReader.cpp  FileReaderCache.cpp  FileWriter.cpp  FormatRow.cpp  Iterator.cpp  LabelManager.cpp  MemoryManager.cpp  OperatorProfilerContext.cpp  PropertyFileBuilder.cpp  PropertyFileParser.cpp  RelFileBuilder.cpp  RelFileManager.cpp  RelFileParser.cpp  RelVersion.cpp  RowGroup.cpp  RowMemoryManager.cpp  RowToColumn.cpp  SSTableBuilder.cpp  SSTableParser.cpp  ScanIter.cpp  ThreadProfilerContext.cpp  Transaction.cpp  TupleEntry.cpp  Version.cpp  VertexEntry.cpp  ordered_dictionary.cpp  profiler.cpp
test/: CMakeLists.txt  test.cpp
test/AP/: CMakeLists.txt  test_ap.cpp
test/TP/: CMakeLists.txt  test_tp.cpp
test/compaction/: CMakeLists.txt  test_compaction.cpp
test/scanK/: CMakeLists.txt  scanK.cpp
